--- a/package.json
+++ b/package.json
@@ -2,6 +2,26 @@
   "name": "simple-store-inventory",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "commit": "npx git-cz",
+    "start-json-server": "json-server --watch mock-db.json --port 5000 --host 0.0.0.0",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "lint": "eslint 'src/**/*.{js,ts,tsx,jsx}'",
+    "lint:fix": "eslint 'src/**/*.{js,ts,tsx,jsx}' --fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": [
+      "eslint --fix"
+    ]
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -10,16 +30,44 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-helmet": "^6.0.0",
+    "@types/react-modal": "^3.10.6",
+    "axios": "^0.19.2",
+    "axios-hooks": "^2.1.0",
+    "babel-plugin-styled-components": "^1.10.7",
+    "formik": "^2.1.4",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
+    "react-loader-spinner": "^3.1.14",
+    "react-modal": "^3.11.2",
+    "react-moment": "^0.9.7",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
+    "styled-components": "^5.1.1",
+    "styled-normalize": "^8.0.7",
+    "typescript": "~3.7.2",
+    "uid": "^1.0.0",
+    "yup": "^0.29.1"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
+    "@types/react-loader-spinner": "^3.1.0",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/styled-components": "^5.1.0",
+    "@types/yup": "^0.29.3",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/parser": "^2.31.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.19.0",
+    "husky": "^4.2.5",
+    "json-server": "^0.16.1",
+    "lint-staged": "^10.2.2",
+    "prettier": "^2.0.5"
   },
   "eslintConfig": {
     "extends": "react-app"
